--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -515,7 +515,7 @@ Conceptual design requirements, and the elements used to build them (architectur
 
 The chapter is structured as follows: Section 1 describes the hierarchical structure of conceptual design requirements. Section 2 presents a set of qualitative spatial attributes found in architecture, shows how each can be interpreted using formal qualitative spatial calculi, and represented formally within DSpace reasoner. Section 3 presents a set of architectural concepts that are built using the spatial qualities presented in the Section 2 and shows how they can be used to reason about design requirements within the DSpace reasoner. Section 4 demonstrates how a the DSpace reasoner can be used to validate a design per its conceptual design requirements.
 
-\section{Hierarchy}
+\section{Multi-Hierarchy}
 The design multi-hierarchy developed in this section is built on the mapping of the design problem into a design space, a quality space, and a quantity space. At the highest level, the design space involves the architectural design semantics (architectural concepts) and qualities (qualitative spatial attributes found in architecture) that emerge in architecture. At the lowest level, the quantitative space involves the precise geometries of the architectural structures found in the design. The qualitative space mediates between the abstractions of the design layer and the concreteness of the quantitative later using qualitative spatial representation and reasoning.
  
 \begin{figure}[H]
@@ -583,12 +583,21 @@ The positioning attribute can be used to check if architectural structures, arte
 \end{figure}
 
 \subsection{Positioning for Sequence of Objects}
-The positioning for a sequence of objects defines a perceptual orientational relationship of a sequence of objects as each relates to a vantage point in an extrinsic context, i.e., a defined space such as a room, apartment, building, or user defined space. A sequence is a set of architectural entities (columns), or interior design objects (display cases) that are grouped together and comprised of the same entity or object type. In general sequences are grouped together based on the proximity of the objects (near to each other) but any relationship can define a sequence. There are four positioning for a sequence of objects relationships: horizontal perceived, vertical perceived, diagonal perceived, and confined.  
+The positioning for a sequence of objects defines a perceptual orientational relationship of a sequence of objects as each relates to a vantage point in an extrinsic context, i.e., a defined space such as a room, apartment, building, or user defined space. A sequence is a set of architectural entities (columns), or interior design objects (display cases) that are grouped together and comprised of the same entity or object type. In general sequences are grouped together based on the proximity of the objects (near to each other) but any relationship can define a sequence. There are three positioning relationships for a sequence of objects: horizontal perceived, vertical perceived, and neither.  
 
-The positioning for a sequence of objects can be spatially interpreted using SCC. The positioning for a sequence of objects attribute uses the SCC partitioning scheme to orientationally, similar to the positioning attribute above, relate a sequence of points (origin, referents) in the context of an external frame of reference (relatum). In DSpace, the reference point is defined as the centroid of the context space. By partitioning space using the centroid, an approximation is made that divides the space into the positioning relationships. As with the positioning attribute, an assumption made in DSpace is that the space will generally be rectangular in shape.
+The positioning for a sequence of objects attribute can be spatially interpreted using SCC, similar to the positioning attribute above. The positioning for a sequence of objects attribute uses the SCC partitioning scheme to orientationally relate a sequence of points (origin, referents) in the context of an external frame of reference (relatum). In DSpace, the reference point is defined as the centroid of the context space. By partitioning space using the centroid, an approximation is made that divides the space into the positioning relationships. As with the positioning attribute, an assumption made in DSpace is that the space will generally be rectangular in shape.
 
-Using the SCC partitioning of space, a sequence of objects is perceived horizontally from the vantage point if the points in the sequence have the following combination of SCC relationships: at least one object in the sequence has an SCC$_{5}$ relationship and at least one object has an SCC$_{3}$ relationship \emph{or} at least one object has SCC$_{7}$ relationship and at least one object has an SCC$_{1}$ relationship. Similarly, a sequence of objects is perceived vertically if they have the following combination of SCC relationships: at least one object in the sequence has an SCC$_{5}$ relationship and at least one object has an SCC$_{7}$ relationship \emph{or} at least one object has an SCC$_{3}$ and at least one object has an SCC$_{1}$ relationship. 
- 
+Using the SCC partitioning of space, a sequence of objects is perceived horizontally from the vantage point if the sequence of points have the following combination of SCC relationships (origin = vantage point, relatum = context centroid, referent = sequence point): at least one point in the sequence has an SCC$_{5}$ or SCC$_{6}$ or SCC$_{7}$ relationship and at least one point has an SCC$_{1}$ or SCC$_{2}$ or SCC$_{3}$ relationships. A sequence of points is perceived vertically if they have the following combination of SCC relationships: at least one point in the sequence has an SCC$_{5}$ or SCC$_{3}$ relationship and at least one point in the sequence has an SCC$_{0}$ or SCC$_{1}$ or SCC$_{7}$ relationship. Sequences can be both vertical and horizontal at the same time or they can be neither. The neither relationship is defined by a sequence of object that do not match any of the sets above.
+
+TODO: figures
+
+Th positioning for a sequence of objects relationships are represented in DSpace as Prolog rules. There is a single rule for each relationship: horizontally perceived, vertically perceived, diagonally perceived, and . The head of each rule takes three arguments, the first for the the vantage point, the second is a list of objects that represent the sequence and the third is the context space. The body of the rule .... Given a vantage point, a sequence of objects and a context space, the rule returns true if the objects are on the horizontally perceived, vertically perceived, diagonally perceived, or confined as defined by its' rule, and fails if they are not. The following is Prolog code for the positioning rules.
+\begin{verbatim}
+   horizontally_perceived(vantage_point, seq_list, context) :-
+           centroid(context, Centroid),
+           horizontally_
+\end{verbatim}
+
 
 \subsection{Facing}
 The facing attribute defines an intrinsic orientational relationship between two objects as each object relates to the other. The definition used here is based on a common sense interpretation of facing, in which an object \emph{A} is facing towards an object \emph{B}, if \emph{A} is directionally oriented at \emph{B}. Under this definition, a pair of objects can be facing towards or away from each other. Given a pair of objects, \emph{A} and \emph{B}, there are four possible facing configurations between the pair: 
@@ -847,9 +856,22 @@ TBD: figure of stair landing
 \subsubsection{Surveillance}
 Surveillance involves the placement of cameras within a building to provide security. A well functioning surveillance system has specific spatial properties with regard to the placement of the cameras to the structures they survey. For example, a surveillance system could monitor activity at doorways. In this situation the spatial relationships between the camera, its range space (i.e., the camera's surveillance area) and the doorways are important. Such a requirement could be expressed as the functional space of every doorway should overlap with the range space of at least one camera. 
 
-\section{Using The DSpace Reasoner}
+\section{Conceptual Design Requirements in The DSpace Reasoner}
+This section will look at how the DSpace reasoner can be used to validate a designers conceptual design requirements against the design's quantitative geometries, and shows how these high level design requirements are broken down into lower level constraints that can be solved by the DSpace reasoner.
 
-This section will describe how to use the DSpace reasoner from a practical perspective....
+DSpace is built in a CLP framework that allows a user to query an architectural design as represented in the multiple perspective design structure. Queries can be design requirements (i.e., a bedroom must be private), architectural concepts (i.e., continuity), QSAs (i.e., doorways facing towards the other), spatial relationships (i.e., functional space of doorway partially overlaps with the range space of camera), or a conjunction of several of these. Each query will respond with a true or fail based on the result of the query. 
+
+The remainder of this section will look at three use case examples. Each use case will show how a user can use the DSpace reasoner to valid the use case requirement and will show how the requirement is broken down in DSPace into lower level constraints that can be solved by the spatial constraint solvers.
+
+\subsection{A Private Room}
+
+
+\subsection{Doorways Facing}
+
+
+\subsection{Sink Doorway Artefact Interaction}
+
+
 
 \chapter{Museum Case Study}
 This chapter is a case study that demonstrates the application of the DSpace reasoner to the design of an art museum. The purpose is twofold: first, to examine several design requirements of an art museum with regards to the spatial interpretation of the requirements; and second, to show how the museum design requirements can be represented and reasoned about in a computational framework, in order to detect design inconsistencies as per the design requirements.
