--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -859,7 +859,18 @@ Surveillance involves the placement of cameras within a building to provide secu
 \section{Conceptual Design Requirements in The DSpace Reasoner}
 This section will look at how the DSpace reasoner can be used to validate a designer's conceptualizations against a design's quantitative representation, and shows how high level design requirements are broken down into lower level constraints that can be solved by the DSpace reasoner.
 
-DSpace is built in a CLP framework that allows a user to query an architectural design as represented in the multiple perspective design structure. Queries can be design requirements (i.e., a bedroom must be private), architectural concepts (i.e., continuity), QSAs (i.e., doorways facing towards the other), spatial relationships (i.e., functional space of doorway partially overlaps with the range space of camera), or a conjunction of these. Each query will respond with a true or fail based on the result of the query. 
+DSpace is built in a CLP framework that allows a user to query an architectural design as represented in the multiple perspective design structure. Queries can be design requirements (i.e., a bedroom must be private), architectural concepts (i.e., continuity), QSAs (i.e., doorways facing towards the other), spatial relationships (i.e., functional space of doorway partially overlaps with the range space of camera), or a conjunction of these. Queries take DSpace identifiers as arguments and respond with a true or fail based on the result of the query. 
+
+For example, a query to check if a desk, with an id \emph{desk12}, is facing towards a window, with id \emph{window15}, the following query is made:
+\begin{verbatim}
+   ?- facing(desk12, window15).
+\end{verbatim} 
+DSpace will respond with \emph{true} if the desk if facing towards the window and \emph{fail} if it is not facing towards the window. Additionally, queries can be combined via conjunction to build more complex queries. For example, an addition query can be added to the one above to also check that the desk is near the window as well. The following query is made:
+\begin{verbatim}
+   ?- facing(desk12, window15),
+      near(desk12, window15.
+\end{verbatim}
+DSpace will respond with \emph{true} is both are true and \emph{fail} if one or both fail.
 
 The remainder of this section will look at two use case examples. Each use case will show how a user can use the DSpace reasoner to valid the use case requirement and will show how the requirement is broken down in DSpace into lower level constraints that can be solved by the spatial constraint solvers.
 
@@ -889,7 +900,18 @@ These three QSA constraints are in turn broken down into qualitative spatial rel
 \end{verbatim}
 These SCC relationships are grounded to the quantitative representation via qualification. The SCC constraints are solved for using the orientational constraint solver.
 
-\subsection{Sink Doorway Artefact Interaction}
+\subsection{Sink / Doorway Artefact Interaction}
+In a particular bathroom there is a design requirement that there should be no artefactual interactions between bathroom entities to ensure proper circulation throughout the bathroom. This includes the requirement that the functional space of all sinks should not interfere with the functional space of a doorway. 
+
+TODO: figure for two bathrooms
+
+Using DSpace a designer can check that there are no artefactual interactions by querying the design representation. The query is a Prolog statement that check for the topological structures of the bathrooms artefactual extension. For example, Figure \ref{?} shows two example bathroom floor plans. Figure \ref{?} shows a bathroom design that is consisted per the requirement and Figure \ref{?} shows a bathroom design that is inconsistent per the requirement. Given these two designs and ids for the sink (\emph{sink55}), and door (\emph{door104}), the following query can be made to check for artefactual interaction:
+\begin{verbatim}
+   artefactual_interaction(sink55, door104).
+\end{verbatim}
+The query will return \emph{true} for Figure \ref{?} and will fail for Figure \ref{?}.
+
+The artefactual_interaction predicate is broken down into topological constraints that check for partially overlapping topological relationships between the artefactual extensions of the bathroom doorway and sink. The topological constraints are solved in the topological constraint solver. 
 
 
 
